Fix preview wrong margin

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -64,7 +64,7 @@ body.edit #admin {
   height: 100%;
   overflow: hidden;
 
-  #text-title {
+  #text-title, h1 {
     margin: 20px 0 0;
 
     pre,
